# project-2_samsonov_m25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: constants.py  core.py  decorators.py  engine.py  main.py  parser.py  utils.py
storage/: db_meta.json
