[tool.poetry]
name = "project-2-samsonov-m25-555"
version = "0.1.0"
description = ""
authors = ["Igor Samsonov <prinstonsam@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.scripts]
project = "src.primitive_db.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
